--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watchAll\""
   },
   "dependencies": {
+    "@capacitor/core": "^2.4.2",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0"
